--- a/src/main/resources/templates/autor/autor.html
+++ b/src/main/resources/templates/autor/autor.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pruebas en Spring</title>
+    <title>Autor</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -60,6 +59,7 @@
             width: 100%;
         }
     </style>
+
 </head>
 <body>
 
@@ -68,7 +68,6 @@
 </header>
 
 <div class="container mt-3">
-
     <nav>
         <a href="/autores">Autores</a>
         <a href="/libros">Libros</a>
@@ -76,12 +75,32 @@
         <a href="/autor/form">Autor/Form</a>
     </nav>
 
-    <section>
-        <p>Bienvenido a nuestra página de pruebas en Spring. Aquí puedes explorar y realizar pruebas relacionadas con el framework Spring.</p>
-        <p>¡Selecciona una opción del menú de navegación para comenzar!</p>
-    </section>
+    <h2>Hover Rows</h2>
+    <p>The .table-hover class enables a hover state (grey background on mouse over) on table rows:</p>
+    <table class="table table-hover">
+        <thead>
+        <tr>
+            <th>Id</th>
+            <th>Nombre</th>
+            <th>Apellido</th>
+            <th>Email</th>
+            <th>Acciones</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="autor : ${autores}">
+            <td th:text="${autor.id}"></td>
+            <td th:text="${autor.nombre}"  ></td>
+            <td th:text="${autor.apellido}" ></td>
+            <td th:text="${autor.email}" ></td>
+            <td>
+                <a th:href="@{/autor/editar/} + ${autor.id}" class="btn btn-success">Editar</a>
+                <a th:href="@{/autor/eliminar/} + ${autor.id}" class="btn btn-danger">Eliminar</a>
+            </td>
+        </tr>
 
-
+        </tbody>
+    </table>
 </div>
 <footer>
     <p>&copy; 2024 Pruebas en Spring</p>
