--- a/src/main/resources/templates/autor/formulario.html
+++ b/src/main/resources/templates/autor/formulario.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pruebas en Spring</title>
+    <title>Autor</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -60,31 +59,56 @@
             width: 100%;
         }
     </style>
+
 </head>
 <body>
+
 
 <header>
     <h1>Pruebas en Spring</h1>
 </header>
 
 <div class="container mt-3">
-
     <nav>
         <a href="/autores">Autores</a>
         <a href="/libros">Libros</a>
         <a href="/libro/form">Libro/Form</a>
         <a href="/autor/form">Autor/Form</a>
     </nav>
+    <h2>Stacked form</h2>
 
-    <section>
-        <p>Bienvenido a nuestra página de pruebas en Spring. Aquí puedes explorar y realizar pruebas relacionadas con el framework Spring.</p>
-        <p>¡Selecciona una opción del menú de navegación para comenzar!</p>
-    </section>
+    <form th:action="@{/autor/form}" method="post" th:object="${autor}">
 
+        <!-- ID-->
+        <div class="mb-3 mt-3">
+            <label >ID:</label>
+            <input type="number" class="form-control"  placeholder="Enter ID" th:field="*{id}" readonly="readonly">
+        </div>
 
+        <!-- Nombre -->
+        <div class="mb-3 mt-3">
+            <label > Nombre:</label>
+            <input type="text" class="form-control" placeholder="Enter nombre" th:field="*{nombre}">
+        </div>
+
+        <!-- Apellido -->
+        <div class="mb-3 mt-3">
+            <label>Apellido:</label>
+            <input type="text" class="form-control" placeholder="Enter apellido" th:field="*{apellido}">
+        </div>
+
+        <!-- Email -->
+        <div class="mb-3">
+            <label >Email:</label>
+            <input type="email" class="form-control"  placeholder="Enter email" th:field="*{email}">
+        </div>
+
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
 </div>
 <footer>
     <p>&copy; 2024 Pruebas en Spring</p>
 </footer>
+
 </body>
 </html>
