--- a/src/main/resources/templates/libro/libro.html
+++ b/src/main/resources/templates/libro/libro.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pruebas en Spring</title>
+    <title>Autor</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -60,6 +59,7 @@
             width: 100%;
         }
     </style>
+
 </head>
 <body>
 
@@ -67,7 +67,9 @@
     <h1>Pruebas en Spring</h1>
 </header>
 
+
 <div class="container mt-3">
+
 
     <nav>
         <a href="/autores">Autores</a>
@@ -75,13 +77,32 @@
         <a href="/libro/form">Libro/Form</a>
         <a href="/autor/form">Autor/Form</a>
     </nav>
+    <h2>Hover Rows</h2>
+    <p>The .table-hover class enables a hover state (grey background on mouse over) on table rows:</p>
+    <table class="table table-hover">
+        <thead>
+        <tr>
+            <th>ID</th>
+            <th>Titulo</th>
+            <th>Publicación</th>
+            <th>Autor</th>
+            <th>Acciones</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="libro : ${libros}">
+            <td th:text="${libro.id}"></td>
+            <td th:text="${libro.titulo}" ></td>
+            <td th:text="${libro.publicacion}" ></td>
+            <td th:text="${libro.autor.nombre} + ${libro.autor.apellido}" ></td>
+            <td>
+                <a href="" class="btn btn-success">Editar</a>
+                <a th:href="@{/libro/eliminar/} + ${libro.id}" class="btn btn-danger">Eliminar</a>
+            </td>
+        </tr>
 
-    <section>
-        <p>Bienvenido a nuestra página de pruebas en Spring. Aquí puedes explorar y realizar pruebas relacionadas con el framework Spring.</p>
-        <p>¡Selecciona una opción del menú de navegación para comenzar!</p>
-    </section>
-
-
+        </tbody>
+    </table>
 </div>
 <footer>
     <p>&copy; 2024 Pruebas en Spring</p>
